[package]
name = "oabot"
version = "0.0.1"
edition = "2018"
[dependencies]
unix-named-pipe = "0.2"
serenity = { version = "0.9.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "0.2", features = ["macros"] }
sys-info = "0.7"
chrono = "0.4"
